# torch.mbt

./: .gitignore  LICENSE  README.md  build.sh  moon.mod.json  moonbit.hpp  run.sh
.github/workflows/: build.sh  check.yaml  moon.pkg.asan.json  test.sh
libtorch_proxy/: .gitignore  CMakeLists.txt  libproxy.cpp
main/: main.mbt  main.mbti  moon.pkg.json
python_examples/: LICENSE
python_examples/mnist/: README.md  gen_data.py  main.py
python_examples/mnist/samples/: mnist_1.pt  mnist_2.pt  mnist_3.pt  mnist_4.pt  mnist_5.pt
torch/: fallback.mbt  model.mbt  moon.pkg.json  moonbit.hpp  native_stub.c  native_stub.cpp  string_convert.mbt  tensor.mbt  torch.mbt  torch.mbti  torch_native.mbt  utils.mbt
